[gd_scene load_steps=2 format=3 uid="uid://s01s01s01s01s01s01s01s01s01s01s01"]

[ext_resource type="Script" path="res://addons/AudioCafe/panel/sync_editor.gd" id="1_sync_editor"]

[node name="SyncEditor" type="HBoxContainer"]
custom_minimum_size = Vector2(0, 30)
script = ExtResource("1_sync_editor")

[node name="ResourceNameLabel" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3
text = "Synchronized Name"
vertical_alignment = 1

[node name="EditButton" type="Button" parent="."]
layout_mode = 2
text = "Editar"
